--- a/Dueling-Clipped-DDQN-optimized.ipynb
+++ b/Dueling-Clipped-DDQN-optimized.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,51 +23,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q-learning model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class act_model(nn.Module):\n",
     "    def __init__(self,inp,hidden,output):\n",
     "        super(act_model, self).__init__()\n",
+    "        \n",
+    "        #Pytorch variables\n",
     "        self.fc1 = nn.Linear(inp, hidden, bias=True)\n",
     "        self.fc2 = nn.Linear(hidden, hidden, bias=True)\n",
     "        self.fc3 = nn.Linear(hidden, hidden, bias=True)\n",
-    "        \n",
     "        self.fc4 = nn.Linear(hidden, 1, bias=True)\n",
     "        self.fc5 = nn.Linear(hidden, output, bias=True)\n",
-    "        \n",
     "        self.fc12 = nn.LeakyReLU()\n",
     "        \n",
+    "        #memory buffer\n",
     "        self.memory = deque(maxlen=500)\n",
     "        \n",
+    "        #q-learning hyperparameters\n",
     "        self.gamma = .95\n",
     "        self.epsilon = 1.0 #exploration rate\n",
     "        self.epsilon_min = .001\n",
     "        self.epsilon_decay = .995\n",
     "        self.tau = .01\n",
     "        \n",
+    "        #loss & optimizer\n",
     "        self.mse = nn.MSELoss()\n",
     "        self.optimizer = optim.Adam(self.parameters(),lr=.001)\n",
     "        \n",
+    "    #Choose epsilon-greedy action\n",
     "    def action(self,state):\n",
-    "        #choose action with probability\n",
     "        if(random.random() <= self.epsilon):\n",
     "            return np.random.choice(out, 1)[0]\n",
     "        else:\n",
     "            q_values = self.forward(state)\n",
     "            return np.argmax(q_values.detach().numpy())  #Q(s,a)\n",
-    "            \n",
+    "        \n",
+    "    #save state,action,reward, & next state in replay buffer\n",
     "    def memorize(self,state,action,reward,next_state,done):\n",
     "        self.memory.append((state,action,reward,next_state,done))\n",
     "        \n",
+    "    #get batch from memory buffer and train pytorch model\n",
     "    def replay(self,batch_size,target_model):\n",
+    "        \n",
+    "        #if batch size too small, don't train network\n",
     "        if(len(self.memory) < batch_size): return 0 \n",
     "        minibatch = random.sample(self.memory,batch_size)\n",
+    "        \n",
+    "        #Train Q-networks\n",
     "        for state,action,reward,next_state,done in minibatch:\n",
     "            target = reward\n",
     "            if not done:\n",
+    "                #find minimum value between the two networks of the max action\n",
     "                target_q_values = target_model.forward(next_state)\n",
     "                primary_q_values = self.forward(next_state)\n",
     "                \n",
@@ -70,8 +94,10 @@
     "                \n",
     "                min_action = min(primary_q_value,target_q_value)\n",
     "                \n",
+    "                #get target value\n",
     "                target = (reward + self.gamma*min_action)\n",
     "                \n",
+    "            #Target_f: Index of chosen action is set to target value\n",
     "            target_f = self.forward(state)\n",
     "            target_f[action] = target\n",
     "            target_g = self.forward(state)\n",
@@ -79,24 +105,29 @@
     "            self.zero_grad()\n",
     "            self.optimizer.zero_grad()\n",
     "            \n",
+    "            #Primary network update\n",
     "            loss = self.mse(target_g,target_f)\n",
     "            loss.backward(retain_graph=True)\n",
     "            self.optimizer.step() \n",
     "        \n",
-    "            # target network update\n",
+    "            #Target network update\n",
     "            for target_param, param in zip(target_model.parameters(), self.parameters()):\n",
     "                target_param.data.copy_(self.tau * param + (1 - self.tau) * target_param)\n",
     "        \n",
+    "        #adjust epsilon value to take less random actions\n",
     "        if self.epsilon > self.epsilon_min:\n",
     "            self.epsilon *= self.epsilon_decay\n",
     "            \n",
+    "    #laod pytorch model\n",
     "    def load(self,PATH):\n",
     "        torch.save(self, PATH)\n",
     "\n",
+    "    #save pytorch model\n",
     "    def save(self,PATH):\n",
     "        model = torch.load(PATH)\n",
     "        return model\n",
     "        \n",
+    "    #run forward pass of pytorch model\n",
     "    def forward(self,x):\n",
     "        out = self.fc12(self.fc1(x))\n",
     "        out = self.fc12(self.fc2(out))\n",
@@ -108,21 +139,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "inp = 4\n",
     "hid = 24\n",
     "out = 2\n",
-    "primary_model = act_model(inp,hid,out)\n",
-    "target_model = act_model(inp,hid,out)\n",
     "\n",
-    "env = gym.make('CartPole-v0')\n",
     "epochs = 2000\n",
     "batch_size = 50\n",
     "\n",
+    "primary_model = act_model(inp,hid,out)\n",
+    "target_model = act_model(inp,hid,out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 0/2000, score: 40, e: 1.0\n",
+      "episode: 1/2000, score: 19, e: 0.94\n",
+      "episode: 2/2000, score: 15, e: 0.87\n",
+      "episode: 3/2000, score: 26, e: 0.76\n",
+      "episode: 4/2000, score: 19, e: 0.69\n",
+      "episode: 5/2000, score: 35, e: 0.57\n",
+      "episode: 6/2000, score: 15, e: 0.53\n",
+      "episode: 7/2000, score: 8, e: 0.51\n",
+      "episode: 8/2000, score: 22, e: 0.45\n",
+      "episode: 9/2000, score: 29, e: 0.39\n",
+      "episode: 10/2000, score: 9, e: 0.37\n",
+      "episode: 11/2000, score: 34, e: 0.31\n",
+      "episode: 12/2000, score: 37, e: 0.26\n",
+      "episode: 13/2000, score: 68, e: 0.18\n",
+      "episode: 14/2000, score: 38, e: 0.15\n",
+      "episode: 15/2000, score: 22, e: 0.13\n",
+      "episode: 16/2000, score: 35, e: 0.11\n",
+      "episode: 17/2000, score: 61, e: 0.081\n",
+      "episode: 18/2000, score: 28, e: 0.07\n",
+      "episode: 19/2000, score: 27, e: 0.061\n",
+      "episode: 20/2000, score: 38, e: 0.05\n",
+      "episode: 21/2000, score: 19, e: 0.045\n",
+      "episode: 22/2000, score: 26, e: 0.04\n",
+      "episode: 23/2000, score: 22, e: 0.035\n",
+      "episode: 24/2000, score: 28, e: 0.031\n",
+      "episode: 25/2000, score: 34, e: 0.026\n",
+      "episode: 26/2000, score: 141, e: 0.013\n",
+      "episode: 27/2000, score: 199, e: 0.0046\n",
+      "episode: 28/2000, score: 175, e: 0.0019\n",
+      "episode: 29/2000, score: 192, e: 0.001\n",
+      "episode: 30/2000, score: 199, e: 0.001\n",
+      "episode: 31/2000, score: 130, e: 0.001\n",
+      "episode: 32/2000, score: 9, e: 0.001\n",
+      "episode: 33/2000, score: 94, e: 0.001\n",
+      "episode: 34/2000, score: 66, e: 0.001\n",
+      "episode: 35/2000, score: 199, e: 0.001\n",
+      "episode: 36/2000, score: 199, e: 0.001\n",
+      "episode: 37/2000, score: 181, e: 0.001\n",
+      "episode: 38/2000, score: 100, e: 0.001\n",
+      "episode: 39/2000, score: 199, e: 0.001\n",
+      "episode: 40/2000, score: 134, e: 0.001\n",
+      "episode: 41/2000, score: 139, e: 0.001\n",
+      "episode: 42/2000, score: 8, e: 0.001\n",
+      "episode: 43/2000, score: 25, e: 0.001\n",
+      "episode: 44/2000, score: 8, e: 0.001\n",
+      "episode: 45/2000, score: 9, e: 0.001\n",
+      "episode: 46/2000, score: 8, e: 0.001\n",
+      "episode: 47/2000, score: 9, e: 0.001\n",
+      "episode: 48/2000, score: 8, e: 0.001\n",
+      "episode: 49/2000, score: 11, e: 0.001\n",
+      "episode: 50/2000, score: 133, e: 0.001\n",
+      "episode: 51/2000, score: 179, e: 0.001\n",
+      "episode: 52/2000, score: 89, e: 0.001\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-294fe8735af0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mprimary_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtarget_model\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-b01236859884>\u001b[0m in \u001b[0;36mreplay\u001b[1;34m(self, batch_size, target_model)\u001b[0m\n\u001b[0;32m     60\u001b[0m             \u001b[0mtarget_g\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36mzero_grad\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1319\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1320\u001b[0m                 \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetach_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1321\u001b[1;33m                 \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1322\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1323\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mshare_memory\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('CartPole-v0')\n",
     "for epoch in range(epochs):\n",
     "    state = env.reset()\n",
     "    for t in range(200):\n",
@@ -143,13 +269,6 @@
     "          .format(epoch, epochs, t, primary_model.epsilon))\n",
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
